@@ -37,7 +37,7 @@ ERRORS
                      $^O: No interpreter-based threading implementation.
                      $^O: No PERL_IMPLICIT_SYS ccflags set.
 
-EXAMPLE
+EXAMPLE1
      use strict;
      use warnings;
 
@@ -60,6 +60,26 @@ EXAMPLE
      # Output on Windows without $Config{'useithreads'} set:
      # We couldn't fork.
      # Error message: MSWin32: No interpreter-based threading implementation.
+
+EXAMPLE2
+     use strict;
+     use warnings;
+
+     use Check::Fork qw(check_fork);
+     use Check::Socket qw(check_socket);
+
+     if (! check_fork()) {
+             print "We couldn't fork.\n";
+             print "Error message: $Check::Fork::ERROR_MESSAGE\n";
+     } elsif (! check_socket()) {
+             print "We couldn't use socket communication.\n";
+             print "Error message: $Check::Socket::ERROR_MESSAGE\n";
+     } else {
+             print "We could use fork and socket communication.\n";
+     }
+
+     # Output on Unix:
+     # We could use fork and socket communication.
 
 DEPENDENCIES
     Config, Exporter, Readonly.
