@@ -1,4 +1,5 @@
 0.03
+ - Add example to doc for test of fork and socket functionality.
 
 0.02 2022-08-26T11:52:58+02:00
  - Add Check::Fork::HardcodedUsage doc.
